# DiscordBot

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  a.py  docker-compose.yml  example-config.yml  pyproject.toml
bot/: __init__.py  __main__.py  config.py
bot/classes/: edgar_bot.py  exceptions.py  extension.py  incarn_bot.py
bot/classes/errors/: __init__.py  config_error.py  database_error.py
bot/extensions/base/: event_listener.py
bot/extensions/game/: _roll_colors.py  coin_flip.py  dark_heresy.py  limbus_company.py  roll.py  vtm.py
bot/extensions/game/vtm/: _colors.py  _health_status.py  vtm.py
bot/extensions/info/: grudge.py  grudges.py  information.py
bot/extensions/info/grudges/: _modals.py  grudges.py
bot/extensions/tools/: converters.py
bot/models/: __init__.py  grudge.py  user.py
bot/utils/: __init__.py  database_controller.py  extension_loader.py  getters.py  setup_logger.py
