[tool.poetry]
name = "incarn"
version = "0.0.7"
description = "A bot for friends and enemies."
authors = ["SidVeld <sidveld@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.6.0"
py-cord = "^2.4.1"
tortoise-orm = "^0.20.0"
dacite = "^1.8.1"
asyncpg = "^0.28.0"
gitpython = "^3.1.40"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"
ruff = "^0.1.4"


[tool.ruff]
select = ["F", "E", "W", "Q", "RET", "I", "C90", "G", "LOG"]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
